--- a/requirements_tf.txt
+++ b/requirements_tf.txt
@@ -13,7 +13,7 @@ Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
 kiwisolver==1.0.1
 Markdown==3.1
-matplotlib==3.0.3
+#matplotlib==3.0.3
 networkx==2.2
 numpy==1.16.2
 pandas==0.24.2
